Better admin login lookin

--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,15 +1,11 @@
-<h1>Login admin</h1>
-
-<form action="<%= admin_authenticate_path %>" method="post">
-  <p>
-    <label for="user_login">Login:</label>
-    <input type="text" id="user_login" name="user[login]" placeholder="User login" />
-  </p>
-  <p>
-    <label for="user_password">Password:</label>
-    <input type="password" id="user_password" name="user[password]" />
-  </p>
-  <p>
-    <input type="submit" />
-  </p>
-</form>
+<style type="text/css">
+  body { padding-top: 40px; padding-bottom: 40px; background-color: #f5f5f5; }
+</style>
+<div class="container login">
+  <form action="<%= admin_authenticate_path %>" method="post" class="form-login">
+    <h2 class="form-login-heading">Please log in</h2>
+      <input type="text" class="input-block-level" name="user[login]" placeholder="Login" />
+      <input type="password" class="input-block-level" name="user[password]" placeholder="Password" />
+      <button class="btn btn-large btn-primary" type="submit">Log in</button>
+  </form>
+</div>
