--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Admin - Login</title>
+  <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
+</head>
+<body>
+
+<% if not flash.empty? %>
+  <% flash.each do |name, msg| %><%# key == {:info|:notice, :success, :warning|:alert, :error} %>
+    <%= content_tag :div, :class => "alert alert-#{name}" do %>
+      <a class="close" data-dismiss="alert">&times;</a>
+      <%= msg %>
+    <% end %>
+  <% end %>
+<% end %>
+
 <style type="text/css">
   body { padding-top: 40px; padding-bottom: 40px; background-color: #f5f5f5; }
 </style>
@@ -9,3 +26,6 @@
       <button class="btn btn-large btn-primary" type="submit">Log in</button>
   </form>
 </div>
+
+</body>
+</html>
