--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,21 +1,84 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Admin</title>
-  <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<% if not flash.empty? %>
-  <% flash.each do |name, msg| %><%# key == {:info|:notice, :success, :warning|:alert, :error} %>
-    <%= content_tag :div, :class => "alert alert-#{name}" do %>
-      <a class="close" data-dismiss="alert">&times;</a>
-      <%= msg %>
-    <% end %>
-  <% end %>
-<% end %>
+    <!-- Le styles -->
+    <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
 
-<%= yield %>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
 
-</body>
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="<%= admin_path %>">remy-hannequin.fr / Admin</a>
+          <div class="nav-collapse collapse">
+            <p class="navbar-text pull-right">
+              Logged in as <%= current_user.firstname %> <%= current_user.lastname %>
+            </p>
+            <ul class="nav">
+              <li class="active"><a href="<%= root_path %>">Front</a></li>
+              <li><a href="<%= portfolio_path %>">Lab</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Projects</li>
+              <li class="active"><a href="#">Liste</a></li>
+              <li><a href="#">Nouveau</a></li>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
+        <div class="span9">
+          <% if not flash.empty? %>
+            <% flash.each do |name, msg| %><%# key == {:info|:notice, :success, :warning|:alert, :error} %>
+              <%= content_tag :div, :class => "alert alert-#{name}" do %>
+                <a class="close" data-dismiss="alert">&times;</a>
+                <%= msg %>
+              <% end %>
+            <% end %>
+          <% end %>
+
+          <%= yield %>
+        </div><!--/span-->
+      </div><!--/row-->
+
+      <hr>
+
+      <footer>
+        <p>&copy; Awesome Portfolio</p>
+      </footer>
+
+    </div><!--/.fluid-container-->
+
+  </body>
 </html>
