--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -53,7 +53,7 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Projects</li>
-              <li class="active"><a href="#">Liste</a></li>
+              <li class="active"><a href="<%= admin_projects_path %>">Liste</a></li>
               <li><a href="#">Nouveau</a></li>
             </ul>
           </div><!--/.well -->
