--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -54,7 +54,7 @@
             <ul class="nav nav-list">
               <li class="nav-header">Projects</li>
               <li class="active"><a href="<%= admin_projects_path %>">Liste</a></li>
-              <li><a href="#">Nouveau</a></li>
+              <li><a href="<%= new_admin_project_path %>">Nouveau</a></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
