--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Projects</h1>
+<h1>Liste des projets</h1>
 
 <table class="table table-striped">
   <tr>
@@ -19,7 +19,7 @@
     <td>
       <div class="btn-group">
         <a href="<%= edit_admin_project_path(project) %>"><button class="btn"><i class="icon-edit"></i></button></a>
-        <%= link_to project, method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <%= link_to 'admin/projects/destroy/%{id}' % { :id => project.id } do %>
           <button class="btn"><i class="icon-remove"></i></button>
         <% end %>
       </div>
