--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,6 +9,7 @@
 
     <!-- Le styles -->
     <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
+    <%= javascript_include_tag 'jquery', 'jquery-ujs', "bootstrap.min" %>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
