--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,223 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- */
+/* ALL */
+
+/* GENERAL */
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #dcdcdc;
+  font-family: Arial,sans-serif;
+  color: #000000;
+  font-size: 16px;
+}
+
+@font-face {
+  font-family: "Carter One";
+  src: url('../../ttf/Carter_One/CarterOne.ttf');
+}
+
+@font-face {
+  font-family: "Lickerli One";
+  src: url('../../ttf/Leckerli_One/LeckerliOne.ttf');
+}
+
+#css_green {
+    background-color: #ADC354;
+    height: 160px;
+}
+
+
+/* HEADER */
+
+header {
+  padding-top: 5px 0px;
+  background-color: #404040;
+}
+
+#gravatar {
+  float: left;
+  margin: 10px 80px 10px 10px;
+  width: 80px;
+  height: 80px;
+  background-image: url('../../img/portrait1.jpg');
+  -moz-border-radius: 90px;
+  -webkit-border-radius: 90px
+  -khtml-border-radius: 90px;
+  border-radius: 90px;
+  border: none;
+}
+
+#gravatar a {
+  padding: 0px 30px 45px 50px;
+  outline: none;
+}
+
+header h3 {
+  margin: 5px;
+  font-family: "Carter One", Arial, sans-serif;
+  text-decoration: none;
+  outline: none;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+header h3.job {
+  font-size: 20px;
+}
+
+header .bracket {
+  font-family: "Lickerli One", Arial, sans-serif;
+  padding: 0px 3px;
+}
+
+
+header h3 a:link,
+header h3 a:visited,
+header h3 a:hover,
+header a:link .bracket,
+header a:visited .bracket,
+header a:hover .bracket {
+  color: #adc354;
+  text-decoration: none;
+}
+
+header h3.job a:link,
+header h3.job a:visited,
+header h3.job a:hover {
+  color: #38a8be;
+}
+
+header ul {
+  font-size: 1.4em;
+  margin-top: 30px;
+}
+
+header .nav a,
+header .nav-pills > .active > a,
+header .nav > li > a:hover {
+  color: #fff;
+  background-color: transparent;
+}
+
+header .nav > li.active > a,
+header .nav > li.active > a:hover {
+  background-color: #5D5D5D;
+}
+
+header .nav > li > a:hover {
+  text-decoration: underline;
+}
+
+
+/* CONTAINER */
+
+#fil_ariane { float: right; font-size: 12px; margin-top: -40px; }
+#fil_ariane { color: #444; }
+#fil_ariane a:link,
+#fil_ariane a:visited { color: #444; text-decoration: underline; }
+#fil_ariane a:hover { text-decoration: none; }
+
+body > .container {
+  margin-top: -100px;
+  background-color: #EAE9E9;
+  border: 1px solid #D3D3D3;
+  padding-top: 10px;
+  position: relative;
+}
+
+body > .container .main {
+  margin: 0px 10px 10px 10px;
+  padding: 10px;
+  background-color: #FFF;
+  border: 1px solid #B7B7B7;
+}
+
+body > .container .main a:link, body > .container .main a:visited {
+  color: #adc354;
+}
+
+body > .container .main a:hover {
+  text-decoration: none;
+}
+
+
+
+/* FOOTER */
+
+footer {
+  background-color: #5d5c5c;
+  color: #e0e0e0;
+  margin-top: -65px;
+  padding-top: 65px;
+  z-index: 99;
+}
+
+footer h3 {
+  font-weight: normal;
+  margin: 0;
+}
+
+footer hr {
+  background-color: #aaa;
+  border: none;
+  height: 1px;
+  margin: 5px 0px;
+}
+
+footer ul {
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+}
+
+footer li {
+  list-style-type: none;
+}
+
+footer a:link, footer a:visited {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
+/* Large desktop */
+@media (min-width: 1200px) {  }
+
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {  }
+
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+
+  header h3 { font-size: 25px; display: inline-block; }
+  header h3.job { font-size: 15px; }
+  header ul.nav { font-size: 1.1em; margin-top: 11px; }
+  #fil_ariane { padding-right: 5px; }
+  footer ul > li { display: inline-block; padding: 0px 10px; }
+  footer ul > li a:hover { text-decoration: underline; }
+  footer hr { display: none; }
+
+}
+
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+
+  header h3 { font-size: 15px; }
+  header h3.job { font-size: 15px; }
+  header ul.nav { font-size: 1em; float: none; margin: 3px; }
+
+}
+
+
+/* Landscape phones */
+@media (max-width: 320px) {
+
+  header h3 { display: none; }
+  header ul.nav { font-size: 0.98em; }
+  body > .container { margin-top: -120px; }
+
+}
