Improve CSS separation

--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Admin - Login</title>
-  <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
+  <%= stylesheet_link_tag "bootstrap.min", "admin", :media => "all" %>
 </head>
 <body>
 
