--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -50,14 +50,14 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :priority, :class => 'control-label' %>
+    <%= f.label :priority, 'Priorité', :class => 'control-label' %>
     <div class="controls">
       <%= f.enum_select :priority %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= f.label :published, :class => 'control-label checkbox inline' %>
+    <%= f.label :published, 'Publié', :class => 'control-label checkbox inline' %>
     <%= f.check_box :published %>
   </div>
 
