--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,8 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
-    <%= stylesheet_link_tag "application", "bootstrap.min", "admin", :media => "all" %>
+    <%= stylesheet_link_tag "bootstrap.min", "admin", :media => "all" %>
     <%= javascript_include_tag 'jquery', 'jquery-ujs', "bootstrap.min" %>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
