--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -40,6 +40,17 @@
   </div>
 
   <div class="control-group">
+    <%= f.label :tag_ids, 'Tags', :class => 'control-label' %>
+    <div class="controls">
+      <% for tag in Tag.all %>
+        <%= check_box_tag "project[tag_ids][]", tag.id, @project.tags.include?(tag), :id => "project_tag_ids_#{tag.id}" %>
+        <%= tag.label %>
+        <br />
+      <% end %>
+    </div>
+  </div>
+
+  <div class="control-group">
     <%= f.label :position, :class => 'control-label' %>
     <div class="controls">
       <%= f.select  :position,
