Handle contact form

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -252,3 +252,20 @@
   }
 
 }
+
+.contact {
+
+  .main h1 {
+    color: #38a8be;
+    font-weight: normal;
+    text-align: center;
+    margin: 20px 0 40px 0;
+  }
+
+
+  .main label {
+    color: #38A8BE;
+    font-weight: bold;
+  }
+
+}
