--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title>Rémy Hannequin - Développeur Web : JavaScript, PHP, Ruby, HTML5 CSS3 - <%= @title %></title>
-  <%= stylesheet_link_tag    "bootstrap.min", "bootstrap-responsive.min", "application", controller_name, :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "bootstrap.min", "bootstrap-responsive.min", "application", controller_name, :media => "all" %>
   <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png" />
   <meta name="viewport" content="width=device-width" />
   <meta name="Author" content="Rémy Hannequin" />
@@ -103,6 +102,7 @@
     </div>
   </footer>
 
+  <script data-params='<%= @require_js_params.to_json %>' data-script="<%= @require_js_script %>" data-main="/assets/main.js" src="/assets/require.js" id="require-js"></script>
   <!-- TODO: events analytics -->
 
 </body>
