[home/projects] Display only one project

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -149,4 +149,8 @@
       </p>
     </div>
   </script>
+
+  <script id="upload-template" type="text/x-template">
+    <img class="galery-item" id="galery_item_{{ index }}" src="{{ link }}" alt="" />
+  </script>
 </div>
