--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -195,6 +195,8 @@
   .works {
     text-align: center;
 
+    .galery-item { display: none; }
+    .work { display: none; }
     .tag { display: inline-block; }
     .choice {
       cursor: pointer;
