--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -90,9 +90,9 @@
             <hr />
             <li><a href="http://ratp.fr">RATP</a></li>
             <hr />
-            <li><a href="/plan">Plan du site</a></li>
+            <li><a href="/sitemap">Plan du site</a></li>
             <hr />
-            <li><a href="/accessibilite">Politique d'accessibilité</a></li>
+            <li><a href="/accessibility">Politique d'accessibilité</a></li>
             <hr />
             <li><a href="/contact">Contact</a></li>
             <hr />
